# Efficient-Fuzzer

./: .gitmodules  README.md
archive/: plan.md  research1.md  research2.md
docs/: 01. 연구개요서 초안.docx  02. 문제점 개요서.docx  03. 브레인스토밍 결과.docx
media/: Week01.md  Youtube_uploaded.md
src/: Dockerfile.fprime_base  docker-compose.yml  target.md
src/FuzzTester/: CmdDispatcherFuzzTester.cpp  CmdDispatcherFuzzTester.hpp  ut_list.txt
src/FuzzTester/auto_ut_CmdDispatcher/: CommandDispatcherComponentAc.cpp  CommandDispatcherGTestBase.cpp  CommandDispatcherTesterBase.cpp  CommandDispatcherTesterBase.hpp  Makefile  fpp-import-list  module-ut-info.txt
src/FuzzTester/auto_ut_CmdDispatcher/fpp-cache/: stdout.txt
src/aflplusplus/: CMakeLists.txt  Dockerfile.aflplusplus  Dockerfile.aflplusplusTH  afl_main.cpp  entrypoint-aflplusplus.sh
src/docker/: Dockerfile.fprime  Dockerfile.libfuzzer  docker-compose.yml  entrypoint.sh  fprime-run.yml  libfuzzer-entrypoint.sh  target.md
src/docker/libFuzzer/: Dockerfile.libfuzzer  libfuzzer-entrypoint.sh
src/gramatron/: CMakeLists.txt  Dockerfile.gramatron  entrypoint-gramatron.sh  gramatron_main.cpp
src/harness/: CmdDispatcherHarness.cpp  CmdDispatcherHarness.hpp  afl_driver.cpp
src/libFuzzer/: CMakeLists.txt  Dockerfile.libfuzzer  Dockerfile.libfuzzerTH  cmd_dis_libfuzzer.cpp  entrypoint-libFuzzer.sh  entrypoint-libFuzzerTH.sh  libFuzzer_main.cpp
src/libFuzzer/FuzzTester/: CMakeLists.txt  CmdDispatcherFuzzTester.cpp  CmdDispatcherFuzzTester.hpp  TestNominal.cpp
src/libFuzzer/auto_ut_CmdDispatcher/: CTestTestfile.cmake  cmake_install.cmake  fpp-source-list  module-info.txt
src/libFuzzer/auto_ut_CmdDispatcher/fpp-cache/: direct.txt
src/libFuzzer/docker/: Dockerfile.libfuzzer  libfuzzer-entrypoint.sh
src/libFuzzer/modified_stub_queue/: Queue.cpp
src/libFuzzer2/: Dockerfile.libfuzzer-TH  entrypoint-libFuzzerTH.sh
src/protobuf-mutator/: CMakeLists.txt  Dockerfile.protobuf_mutator  cmd_dispatcher_fuzz_input.proto  entrypoint-protobuf_mutator.sh  libFuzzer_main.cpp  make_seeds.py  protobuf_mutator_main.cpp
